--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "devDependencies": {
     "electron": "28.0.0",
-    "electron-builder": "24.9.1",
+    "electron-builder": "^24.13.3",
     "ffprobe-static": "^3.1.0"
+  },
+  "dependencies": {
+    "image-size": "^1.1.1"
   }
 }
