--- a/package.json
+++ b/package.json
@@ -1,18 +1,47 @@
 {
   "name": "media-deletion-helper",
   "version": "1.0.0",
-  "main": "main.js",
+  "description": "A helper application for managing and deleting media files",
+  "author": "Your Name",
+  "main": "./main.js",
   "scripts": {
     "start": "electron .",
     "electron": "electron .",
     "build": "electron-builder"
   },
+  "dependencies": {
+    "ffprobe-static": "^3.1.0",
+    "image-size": "^1.1.1"
+  },
   "devDependencies": {
     "electron": "28.0.0",
-    "electron-builder": "^24.13.3",
-    "ffprobe-static": "^3.1.0"
+    "electron-builder": "^24.13.3"
   },
-  "dependencies": {
-    "image-size": "^1.1.1"
+  "build": {
+    "appId": "media-deletion-helper",
+    "productName": "Media Deletion Helper",
+    "files": [
+      "main.js",
+      "preload.js",
+      "renderer.js",
+      "index.html",
+      "trashcan.png",
+      "node_modules/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "node_modules/ffprobe-static/",
+        "to": "ffprobe-static/",
+        "filter": ["**/*"]
+      }
+    ],
+    "asar": true,
+    "directories": {
+      "output": "release"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "trashcan.png"
+    }
   }
 }
